--- a/isorna/package.json
+++ b/isorna/package.json
@@ -1,5 +1,8 @@
 {
   "name": "demo-app",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {
+    "firebase": "^2.2.4",
+    "node-sass": "^2.1.1"
+  }
 }
