--- a/isorna/package.json
+++ b/isorna/package.json
@@ -4,5 +4,11 @@
   "dependencies": {
     "firebase": "^2.2.4",
     "node-sass": "^2.1.1"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.3.2",
+    "karma": "^0.12.31",
+    "karma-chrome-launcher": "^0.1.10",
+    "karma-jasmine": "^0.3.5"
   }
 }
